# esh

./: CHANGELOG  CMakeLists.txt  Makefile  TODO  bold.c  builtins.c  builtins.h  common.h  esh.c  esh.h  format.c  format.h  gc.c  gc.h  hash.c  hash.h  job.h  list.c  list.h
debian/: changelog  control  copyright  doc-base  docs  esh.1  info  menu  rules  watch
doc/: esh.html  esh.info  esh.texi  esh_toc.html
examples/: gaudy.esh
fake-readline/: history.h  readline.c  readline.h
